# igvc-2023-software

./: .gitignore  .gitmodules  CV2Capture  README.md
boat2023_nav2/: CMakeLists.txt  package.xml
boat2023_nav2/launch/: carla_nav.launch.py  carla_nav2.launch.py  costmap_gradient.launch.py  nav2.launch.py
boat2023_nav2/params/: carla_nav2_params.yaml  costmap_params.yaml  ekf_params.yaml  nav2_params.yaml
boat2023_nav2/src/: carla_republisher.py
boat2023_nav2/src/description/: boat2023.urdf  boat2023_description.urdf
gps_nodes_to_test/: gps_waypoints.launch.py  gps_waypoints.py
image_converter/: CMakeLists.txt  package.xml
image_converter/src/: image_converter.cpp
img_to_pcl/: CMakeLists.txt  package.xml
img_to_pcl/src/: img_to_pcl.cpp
interpret_bev/: CMakeLists.txt  package.xml
interpret_bev/src/: bev_to_grid_map.cpp  bev_to_point_cloud.cpp  pcl_to_grid_map.cpp
nav2_bev_costmap_plugin/: CMakeLists.txt  package.xml  plugin.xml
nav2_bev_costmap_plugin/include/nav2_bev_costmap_plugin/: bev_layer.hpp
nav2_bev_costmap_plugin/src/: bev_layer.cpp
nav2_gradient_costmap_plugin/: CMakeLists.txt  gradient_layer.xml
nav2_gradient_costmap_plugin/include/nav2_gradient_costmap_plugin/: gradient_layer.hpp
nav2_gradient_costmap_plugin/src/: gradient_layer.cpp
node/: platformio.ini
node/examples/: esp32_can_sender_receiver.cpp  stepper_test.cpp
node/include/: led.h  pwm.h  twai.h
node/src/: led.cpp  main.cpp  pwm.cpp  twai.cpp
node/test/: test_fsm.cpp
para_ai/: package.xml  setup.cfg  setup.py
para_ai/config/: camera_calibration.npz  camera_calibration.yaml
para_ai/launch/: bev_inference.launch.py  bev_inference_carla.launch.py
para_ai/para_ai/: bev_inference_node.py  gstreamer_node.py  jetson_gstreamer_node.py  resize_node.py  rpi_gstreamer_node.py
para_control/: package.xml  setup.cfg  setup.py
para_control/launch/: control.launch.py
para_control/para_control/: can_interface.py  joy_to_twist_node.py  joy_to_twist_node_copy.py  joy_to_twist_node_twd.py  joy_to_twist_node_twist.py  keyboard_control_node.py  motor_controller_node.py  motor_controller_node_copy.py  motor_controller_node_twd.py  motor_controller_node_twist.py  teleop_pub_node.py  test.py
