<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>boat2023_nav2</name>
  <version>0.0.0</version>
  <description>Launch boat2023 nav things for carla</description>
  <maintainer email="anash@mun.ca">Andrew Nash</maintainer>
  <license>Beerware v42</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_common</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_bringup</depend>
  <depend>pluginlib</depend>
  <depend>nav2_bev_costmap_plugin</depend>
  <depend>img_to_pcl</depend>
  <depend>rclcpp</depend>
  <depend>scanmatcher</depend>
  <depend>graph_based_slam</depend>
  <depend>lidarslam_msgs</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
